[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sct"
description = "SAR Calibration Tool"
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
license = { text = "MIT" }
classifiers = [
	"Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8,<3.9"
dependencies = [
    "numpy",
    "scipy",
    "jupyter",
    "pandas==1.3.5",
	"rasterio",
	"openpyxl",
	"shapely",
	"pyxb",
	"lxml",
	"python-dateutil",
    ]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "sct.__version__" }

[tool.black]
line-length = 120

[tool.pylint.FORMAT]
max-line-length = 120
